--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,96 @@
 /* You can add global styles to this file, and also import other style files */
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  font: inherit;
+}
+
+.container {
+  padding: 10px;
+
+  .header-section {
+    display: flex;
+    justify-content: space-between;
+  }
+
+}
+
+// primary button styles
+.primary-btn {
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+
+  &:hover {
+    opacity: .7;
+  }
+
+  &:disabled {
+    opacity: .3;
+  }
+}
+
+.blue-bg {
+  background-color: rgb(48, 151, 211) !important;
+  color: white;
+
+}
+
+//title styles
+.title {
+  font-weight: bold;
+  font-size: 1.4rem;
+}
+
+.sub-heading {
+  padding: 10px;
+  font: 1.2rem;
+}
+
+//return button
+.return {
+  margin-right: 10px;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+// table styles
+.table {
+  width: 100%;
+  border-collapse: collapse;
+
+  .table-header {
+    background-color: #e0f6ff;
+  }
+
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: left;
+}
+
+// table cells
+.cell {
+  max-width: 97%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  text-align: left;
+}
+
+// footer buttons styles
+.footer {
+  display: flex;
+  justify-content: flex-end;
+}
